--- 18-August, version 1.9-7
cluster support for raster::predict function (run beginCluster() before using predict)

--- 11-August, version 1.9-6
Bug fix with subset of a RasterBrick from disk. Reported by Stefan Schlaffer. 
https://r-forge.r-project.org/tracker/?func=detail&atid=1189&aid=1520&group_id=294
Some improvements to setValues with a RasterBrick based on suggestions by Julian Zeidler
https://r-forge.r-project.org/tracker/?func=detail&atid=1189&aid=1504&group_id=294
Fixed some problems (reported by Carsten Neumann) with plot that were introduced when replacing 'image' with 'rasterImage' 

--- 27-July-2011, version 1.9-3
Patches by Pierre Roudier to improve coercion from Raster* to Spatial* objects.
new function as.data.frame for Raster* objects

--- 23-July-2011, version 1.9-2
Removed generic function 'Median'
Added generic index/replace function for Raster* and matrix.

--- 19-July-2011, version 1.9-1
MAJOR bug fix in arith.  If x is a Raster* object, a-x returned x-a, and a/x returned x/a. Reported by Steven Mosher. 
plot now uses rasterImage instead of image
Replacement functions implemented for RasterStack/Brick objects (e.g., x[x<1] <- NA )

--- 10-July-2011, version 1.8-42
removed '$size' from list returned by 'blockSize' function (because size can be different for last block). Use $nrows[i] instead.
bug fix in flip(x, 'y') for x is RasterStackBrick when writing to disk

--- 8-July-2011, version 1.8-41
removed gplot and plot3D functions. These are now in the rasterVis package
added linear and histogram stretch options to plotRGB; based on Josh Gray's code in http://spatiallyexplicit.wordpress.com/2011/06/07/crop-circles/
added a scalebar function, partly based on a function by Josh Gray

--- 3-July-2011, version 1.8-39
Bug fix, cover failed with RasterBricks (reported by Steven Mosher)
Quicker subset with RasterBricks (suggested by Christian Kamenik)

--- 16-June-2011, version 1.8-37